Naming convention for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fiascode/netlipress",
+    "name": "netlipress/netlipress",
     "type": "project",
     "description": "Netlipress Framework.",
     "keywords": [
