--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "netlipress/netlipress",
-    "type": "project",
-    "description": "Netlipress Framework.",
-    "keywords": [
-        "netlify",
-        "wordpress"
-    ],
-    "license": "MIT",
-    "minimum-stability": "dev",
-    "require": {
-        "fiascode/netlipress-framework": "^1.*"
-    }
+  "name": "netlipress/netlipress",
+  "type": "project",
+  "description": "Netlipress Starter Project",
+  "keywords": [
+    "netlify",
+    "wordpress"
+  ],
+  "license": "MIT",
+  "minimum-stability": "dev",
+  "require": {
+    "fiascode/netlipress-framework": "^0.0.1"
+  }
 }
