--- a/web/admin/config.yml
+++ b/web/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
 # Define auth here
 
-media_folder: "content/uploads"
+media_folder: "web/uploads"
 
 collections:
 # Define collections here
