--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "watch": "npx mix watch",
     "dev": "npx mix",
-    "prod": "npx mix --production"
+    "prod": "npx mix --production",
+    "proxy": "npx netlify-cms-proxy-server"
   },
   "keywords": [],
   "author": "",
